unpackaged/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>As part of REQ-2509</description>
    <label>Equipment</label>
    <nameField>
        <displayFormat>EQ-{0000}</displayFormat>
        <label>Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>