unpackaged/main/default/objects/Equipment__c/fields/Account_Plant__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account-Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>Equipments</relationshipLabel>
    <relationshipName>Equipments1</relationshipName>
    <type>Lookup</type>
</CustomField>