unpackaged/main/default/objects/Equipment__c/fields/Account_Plant_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant_Formula__c</fullName>
    <description>We have created this field as per the Data dictionary Update to add in the list view this will not be used in the Page Layout</description>
    <formula>Account_Plant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plant</label>
    <type>Text</type>
</CustomField>