unpackaged/main/default/objects/Equipment__c/fields/Bluepoint_data_connection__c.field-meta.xml
<CustomField>
    <fullName>Bluepoint_data_connection__c</fullName>
    <label>Bluepoint data connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Powerfactors</fullName>
            </value>
            <value>
                <fullName>Also Energy</fullName>
            </value>
            <value>
                <fullName>Greenbyte</fullName>
            </value>
            <value>
                <fullName>Locus</fullName>
            </value>
            <value>
                <fullName>Meteocontrol</fullName>
            </value>
            <value>
                <fullName>Synaptiq</fullName>
            </value>
            <value>
                <fullName>SolarEdge</fullName>
            </value>
            <value>
                <fullName>GPM</fullName>
            </value>
            <value>
                <fullName>Inaccess</fullName>
            </value>
            <value>
                <fullName>Enphase</fullName>
            </value>
            <value>
                <fullName>Ikologik</fullName>
            </value>
            <value>
                <fullName>Enervest (7C Solarparken)</fullName>
            </value>
            <value>
                <fullName>Nispera API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>