unpackaged/main/default/objects/Equipment__c/fields/Bluepoint_site_ID__c.field-meta.xml
<CustomField>
    <fullName>Bluepoint_site_ID__c</fullName>
    <label>Bluepoint site ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>