unpackaged/main/default/objects/Equipment__c/fields/DAS_SCADA_Provider__c.field-meta.xml
<CustomField>
    <fullName>DAS_SCADA_Provider__c</fullName>
    <label>Drive Customer Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Also Energy</fullName>
            </value>
            <value>
                <fullName>Ardexa</fullName>
            </value>
            <value>
                <fullName>Campbell Scientific</fullName>
            </value>
            <value>
                <fullName>DAS/SCADA - Onsite</fullName>
            </value>
            <value>
                <fullName>DAS/SCADA - Remote</fullName>
            </value>
            <value>
                <fullName>Draker Energy</fullName>
            </value>
            <value>
                <fullName>Egauge system</fullName>
            </value>
            <value>
                <fullName>ELM</fullName>
            </value>
            <value>
                <fullName>FTP Server</fullName>
            </value>
            <value>
                <fullName>Greenbyte</fullName>
            </value>
            <value>
                <fullName>GreenPowerMonitor</fullName>
            </value>
            <value>
                <fullName>Inaccess</fullName>
            </value>
            <value>
                <fullName>Locus Energy</fullName>
            </value>
            <value>
                <fullName>MeteoControls</fullName>
            </value>
            <value>
                <fullName>Nant Energy</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>OSI Soft PSI</fullName>
            </value>
            <value>
                <fullName>Power Factors</fullName>
            </value>
            <value>
                <fullName>Skytron</fullName>
            </value>
            <value>
                <fullName>SolarEdge</fullName>
            </value>
            <value>
                <fullName>SolrenView</fullName>
            </value>
            <value>
                <fullName>Trimark</fullName>
            </value>
            <value>
                <fullName>SOLV SCADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>