unpackaged/main/default/objects/Equipment__c/fields/Data_connection_details__c.field-meta.xml
<CustomField>
    <fullName>Data_connection_details__c</fullName>
    <formula>TEXT(Drive_OEM__c) + &quot;  &quot; + Drive_Customer_Solution_Formula__c + &quot;  &quot; + Drive_Data_connection_Formula_Reference__c + &quot;  &quot; + TEXT(Model__c) + &quot;  &quot; + TEXT( Bluepoint_data_connection__c ) + &quot;  &quot; +TEXT(Bluepoint_site_ID__c)  + &quot;  &quot; + TEXT(Bluepoint_site_identifier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data connection details</label>
    <type>Text</type>
</CustomField>