unpackaged/main/default/objects/Equipment__c/fields/Data_connection_notes__c.field-meta.xml
<CustomField>
    <fullName>Data_connection_notes__c</fullName>
    <label>Data connection notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>