unpackaged/main/default/objects/Equipment__c/fields/Drive_OEM__c.field-meta.xml
<CustomField>
    <fullName>Drive_OEM__c</fullName>
    <label>Drive OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elster</fullName>
            </value>
            <value>
                <fullName>ENERGY RECOMMERCE</fullName>
            </value>
            <value>
                <fullName>FAT SPANIEL</fullName>
            </value>
            <value>
                <fullName>Generation</fullName>
            </value>
            <value>
                <fullName>G&amp;W</fullName>
            </value>
            <value>
                <fullName>Hukseflux</fullName>
            </value>
            <value>
                <fullName>Hubbel</fullName>
            </value>
            <value>
                <fullName>ION</fullName>
            </value>
            <value>
                <fullName>Li-Cor</fullName>
            </value>
            <value>
                <fullName>Locus Energy</fullName>
            </value>
            <value>
                <fullName>Lufft</fullName>
            </value>
            <value>
                <fullName>Milbank</fullName>
            </value>
            <value>
                <fullName>Nexus</fullName>
            </value>
            <value>
                <fullName>PG&amp;E</fullName>
            </value>
            <value>
                <fullName>POWERLOGIC</fullName>
            </value>
            <value>
                <fullName>Satec</fullName>
            </value>
            <value>
                <fullName>SEL</fullName>
            </value>
            <value>
                <fullName>Shark</fullName>
            </value>
            <value>
                <fullName>SHARP</fullName>
            </value>
            <value>
                <fullName>SolarEdge</fullName>
            </value>
            <value>
                <fullName>Sun Edison</fullName>
            </value>
            <value>
                <fullName>TransData Inc</fullName>
            </value>
            <value>
                <fullName>Veris</fullName>
            </value>
            <value>
                <fullName>WATTSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>