unpackaged/main/default/objects/Equipment__c/fields/Drive_Solution_1__c.field-meta.xml
<CustomField>
    <fullName>Drive_Solution_1__c</fullName>
    <label>Drive Data connection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF Gateway Interface</fullName>
            </value>
            <value>
                <fullName>Third-Party gateway Interface</fullName>
            </value>
            <value>
                <fullName>Third-Party Server Interface</fullName>
            </value>
            <value>
                <fullName>API- AlsoEnergy</fullName>
            </value>
            <value>
                <fullName>API - Deck</fullName>
            </value>
            <value>
                <fullName>API - Draker</fullName>
            </value>
            <value>
                <fullName>API - Drakerv7</fullName>
            </value>
            <value>
                <fullName>API - LocusEnergy</fullName>
            </value>
            <value>
                <fullName>API - Egauge</fullName>
            </value>
            <value>
                <fullName>API - Enphase</fullName>
            </value>
            <value>
                <fullName>API - Fronius</fullName>
            </value>
            <value>
                <fullName>API - GreenPowerMonitor</fullName>
            </value>
            <value>
                <fullName>API - Itron</fullName>
            </value>
            <value>
                <fullName>API - Noveda</fullName>
            </value>
            <value>
                <fullName>API - SEConnect</fullName>
            </value>
            <value>
                <fullName>API - SolarEdge</fullName>
            </value>
            <value>
                <fullName>API - SolrenView</fullName>
            </value>
            <value>
                <fullName>FTP - General</fullName>
            </value>
            <value>
                <fullName>FTP - Skytron/Drive</fullName>
            </value>
            <value>
                <fullName>N3uron - Onsite</fullName>
            </value>
            <value>
                <fullName>N3uron - MQTT</fullName>
            </value>
            <value>
                <fullName>N3uron - Obvious AQS</fullName>
            </value>
            <value>
                <fullName>N3uron - REST API</fullName>
            </value>
            <value>
                <fullName>OSI PI - Connector</fullName>
            </value>
            <value>
                <fullName>OSI PI - Direct Connect</fullName>
            </value>
            <value>
                <fullName>OSI PI - Campbel Scientific</fullName>
            </value>
            <value>
                <fullName>Kafka Connector - API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>