unpackaged/main/default/objects/Equipment__c/fields/Equipment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Summary__c</fullName>
    <formula>TEXT(Quantity__c) + &quot; * &quot; + TEXT(Equipment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Summary</label>
    <type>Text</type>
</CustomField>