unpackaged/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BESS package</fullName>
            </value>
            <value>
                <fullName>Bluepoint</fullName>
            </value>
            <value>
                <fullName>Combiners/Recombiners</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Grid Monitoring Unit</fullName>
            </value>
            <value>
                <fullName>Hydro Generator</fullName>
            </value>
            <value>
                <fullName>Measurement Unit</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Other core device</fullName>
            </value>
            <value>
                <fullName>Other peripheral device</fullName>
            </value>
            <value>
                <fullName>Protective device</fullName>
            </value>
            <value>
                <fullName>Solar Inverter</fullName>
            </value>
            <value>
                <fullName>String inverter</fullName>
            </value>
            <value>
                <fullName>Substation</fullName>
            </value>
            <value>
                <fullName>Tracker Controller/Motor</fullName>
            </value>
            <value>
                <fullName>Weather Station</fullName>
            </value>
            <value>
                <fullName>Wind Turbine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>