unpackaged/main/default/objects/Equipment__c/fields/GB_Data_connection__c.field-meta.xml
<CustomField>
    <fullName>GB_Data_connection__c</fullName>
    <label>GB Data connection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>GB_OEM__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABB Aurora Vision Cloud API</fullName>
            </value>
            <value>
                <fullName>ABB HMI500 ODBC via IPSEC or NAT</fullName>
            </value>
            <value>
                <fullName>ABB MicroSCADA IEC104 via IPSEC</fullName>
            </value>
            <value>
                <fullName>ABB RTU IEC104 via IPSEC or NAT</fullName>
            </value>
            <value>
                <fullName>Acciona ODBC via IPSEC</fullName>
            </value>
            <value>
                <fullName>Acciona OPC DA via OPCBuffer</fullName>
            </value>
            <value>
                <fullName>Acciona OPC UA via IPSEC</fullName>
            </value>
            <value>
                <fullName>ACEnergy/AcaciaSoft Amber Google Pub/Sub dispatch data</fullName>
            </value>
            <value>
                <fullName>AlsoEnergy Production Data API over HTTPS</fullName>
            </value>
            <value>
                <fullName>Alstom ODBC via IPSEC or NAT</fullName>
            </value>
            <value>
                <fullName>Alstom OPC DA via OPCBuffer</fullName>
            </value>
            <value>
                <fullName>AP Sensing DTS ODBC via IPSEC or NAT</fullName>
            </value>
            <value>
                <fullName>Ardexa API</fullName>
            </value>
            <value>
                <fullName>Beckhoff TwinCAT OPC UA via IPSEC or NAT</fullName>
            </value>
            <value>
                <fullName>CapeBox SQL server push via OpenVPN</fullName>
            </value>
            <value>
                <fullName>CapFile Grid Meter connection via FTP Push</fullName>
            </value>
            <value>
                <fullName>Centrica/NEAS Grid Meter data API</fullName>
            </value>
            <value>
                <fullName>Centrica/NEAS Production Forecast API</fullName>
            </value>
            <value>
                <fullName>Centrica DataPush, CSV over sFTP</fullName>
            </value>
            <value>
                <fullName>Centrica Grid Meter data csv via FTP</fullName>
            </value>
            <value>
                <fullName>Circutor OPCDA Server PS/PSS for PowerStudio SCADA via OPCBuffer</fullName>
            </value>
            <value>
                <fullName>Creos Grid Meter Excel files via EMail</fullName>
            </value>
            <value>
                <fullName>Discovergy Grid Meter data API</fullName>
            </value>
            <value>
                <fullName>DLMS meter data via IPSEC or NAT</fullName>
            </value>
            <value>
                <fullName>DLMS meter data via Modem</fullName>
            </value>
            <value>
                <fullName>DNP3 via IPSEC or NAT</fullName>
            </value>
            <value>
                <fullName>DNVGL DataPush, CSV over sFTP</fullName>
            </value>
            <value>
                <fullName>Dongfang OPCXML via IPSEC or NAT</fullName>
            </value>
            <value>
                <fullName>Dongfang OPCXML via OPCBuffer</fullName>
            </value>
            <value>
                <fullName>Draker API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>