unpackaged/main/default/objects/Equipment__c/fields/GB_Data_connection_Formula_Text__c.field-meta.xml
<CustomField>
    <fullName>GB_Data_connection_Formula_Text__c</fullName>
    <label>GB Data connection(Formula Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>