unpackaged/main/default/objects/Equipment__c/fields/GB_OEM__c.field-meta.xml
<CustomField>
    <fullName>GB_OEM__c</fullName>
    <label>GB OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABB</fullName>
            </value>
            <value>
                <fullName>Acciona</fullName>
            </value>
            <value>
                <fullName>Advanced Energy</fullName>
            </value>
            <value>
                <fullName>AEG</fullName>
            </value>
            <value>
                <fullName>AllEarth</fullName>
            </value>
            <value>
                <fullName>Alstom</fullName>
            </value>
            <value>
                <fullName>Ammonit</fullName>
            </value>
            <value>
                <fullName>Answer Drives</fullName>
            </value>
            <value>
                <fullName>AP Sensing</fullName>
            </value>
            <value>
                <fullName>AROS</fullName>
            </value>
            <value>
                <fullName>Bonfiglioli</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Campbell</fullName>
            </value>
            <value>
                <fullName>Chint Solar</fullName>
            </value>
            <value>
                <fullName>Clipper</fullName>
            </value>
            <value>
                <fullName>Concentrix Solar</fullName>
            </value>
            <value>
                <fullName>Conergy</fullName>
            </value>
            <value>
                <fullName>Danfoss</fullName>
            </value>
            <value>
                <fullName>DataPush</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Dongfang</fullName>
            </value>
            <value>
                <fullName>Eaton</fullName>
            </value>
            <value>
                <fullName>Eisman</fullName>
            </value>
            <value>
                <fullName>Elster</fullName>
            </value>
            <value>
                <fullName>Emerson</fullName>
            </value>
            <value>
                <fullName>eMS</fullName>
            </value>
            <value>
                <fullName>Enercon</fullName>
            </value>
            <value>
                <fullName>Enerdis</fullName>
            </value>
            <value>
                <fullName>Engie  Solar</fullName>
            </value>
            <value>
                <fullName>Envision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>