unpackaged/main/default/objects/Equipment__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>GB Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GB_OEM__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABB Aurora Trio-27.6-TL</fullName>
            </value>
            <value>
                <fullName>ABB PVI 10.0-OUTD</fullName>
            </value>
            <value>
                <fullName>ABB PVI 12.0-OUTD</fullName>
            </value>
            <value>
                <fullName>ABB PVS 100-TL</fullName>
            </value>
            <value>
                <fullName>ABB PVS 175-TL</fullName>
            </value>
            <value>
                <fullName>ABB PVS980</fullName>
            </value>
            <value>
                <fullName>Acciona AW132-3300</fullName>
            </value>
            <value>
                <fullName>Acciona AW140-3000</fullName>
            </value>
            <value>
                <fullName>Acciona AW1500</fullName>
            </value>
            <value>
                <fullName>Acciona AW77-1500</fullName>
            </value>
            <value>
                <fullName>Acciona AW82</fullName>
            </value>
            <value>
                <fullName>Advanced Energy AE 260TX</fullName>
            </value>
            <value>
                <fullName>Advanced Energy AE 500TX</fullName>
            </value>
            <value>
                <fullName>Advanced Energy Solaron 333</fullName>
            </value>
            <value>
                <fullName>Advanced Energy Solaron 500</fullName>
            </value>
            <value>
                <fullName>AEG Protect PV 690</fullName>
            </value>
            <value>
                <fullName>Alstom ECO100</fullName>
            </value>
            <value>
                <fullName>Alstom ECO110</fullName>
            </value>
            <value>
                <fullName>Alstom ECO122</fullName>
            </value>
            <value>
                <fullName>Alstom ECO74</fullName>
            </value>
            <value>
                <fullName>Alstom ECO80</fullName>
            </value>
            <value>
                <fullName>Ammonit METEO-40</fullName>
            </value>
            <value>
                <fullName>AROS Sirio 250K HV-MT</fullName>
            </value>
            <value>
                <fullName>Battery Inverter</fullName>
            </value>
            <value>
                <fullName>BDB Index</fullName>
            </value>
            <value>
                <fullName>BESS</fullName>
            </value>
            <value>
                <fullName>BESS Container</fullName>
            </value>
            <value>
                <fullName>Bonifiglioli RPS450 Compact 120</fullName>
            </value>
            <value>
                <fullName>Bonifiglioli RPS450 Compact 170</fullName>
            </value>
            <value>
                <fullName>Bonus/Siemens B37/450</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>