unpackaged/main/default/objects/Equipment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>