unpackaged/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Quantity__c</columns>
    <columns>Account_Plant__c</columns>
    <columns>DAS_SCADA_Provider__c</columns>
    <columns>Drive_OEM__c</columns>
    <columns>GB_OEM__c</columns>
    <columns>GB_Data_connection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>